@@ -5,6 +5,7 @@ import com.careapp.domain.RecurringTask;
 import com.careapp.dto.CreateRecurringTaskRequest;
 import com.careapp.service.TaskService;
 import com.careapp.service.RecurringTaskService;
+import com.careapp.service.TaskRequestService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
@@ -15,8 +16,10 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDate;
-import java.util.*;
+import java.util.List;
+import java.util.Optional;
 
+import static org.hamcrest.Matchers.containsString;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
@@ -32,216 +35,88 @@ class TaskControllerTest {
     @MockBean
     private RecurringTaskService recurringTaskService;
 
-    private Task mockTask;
-    private RecurringTask mockRecurringTask;
+    @MockBean
+    private TaskRequestService taskRequestService;
+
+    private Task task;
+    private RecurringTask recurringTask;
 
     @BeforeEach
     void setUp() {
-        mockTask = new Task();
-        mockTask.setId("task001");
-        mockTask.setTitle("Check medication");
-        mockTask.setStatus("In Progress");
-        mockTask.setPatientId("p1");
-        mockTask.setAssignedToId("w1");
+        task = new Task();
+        task.setId("t1");
+        task.setTitle("Medication Reminder");
+        task.setStatus("In Progress");
 
-        mockRecurringTask = new RecurringTask();
-        mockRecurringTask.setId("rec001");
-        mockRecurringTask.setTitle("Weekly Health Check");
-        mockRecurringTask.setIsActive(true);
+        recurringTask = new RecurringTask();
+        recurringTask.setId("r1");
+        recurringTask.setTitle("Daily Exercise");
+        recurringTask.setIsActive(true);
     }
 
-    // ========== Create Task ==========
     @Test
     void testCreateTaskSuccess() throws Exception {
-        Mockito.when(taskService.createTask(Mockito.any(Task.class))).thenReturn(mockTask);
-
-        String body = "{"
-                + "\"title\":\"Check medication\","
-                + "\"status\":\"In Progress\""
-                + "}";
-
+        Mockito.when(taskService.createTask(Mockito.any(Task.class))).thenReturn(task);
+        String body = "{\"title\":\"Medication Reminder\"}";
         mockMvc.perform(post("/api/tasks")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(body))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.msg").value("Task created successfully!"))
-                .andExpect(jsonPath("$.data.id").value("task001"));
+                .andExpect(jsonPath("$.data.title").value("Medication Reminder"));
     }
 
     @Test
     void testCreateTaskFailure() throws Exception {
         Mockito.when(taskService.createTask(Mockito.any(Task.class)))
-                .thenThrow(new RuntimeException("DB error"));
-
-        String body = "{"
-                + "\"title\":\"Check medication\""
-                + "}";
-
+                .thenThrow(new RuntimeException("DB Error"));
         mockMvc.perform(post("/api/tasks")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(body))
+                        .content("{\"title\":\"test\"}"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value("500"))
-                .andExpect(jsonPath("$.msg").value("Failed to create task: DB error"));
+                .andExpect(jsonPath("$.msg", containsString("Failed to create task")));
     }
 
-    // ========== Get All Tasks ==========
     @Test
-    void testGetAllTasksSuccess() throws Exception {
-        Mockito.when(taskService.getAllTasks()).thenReturn(Arrays.asList(mockTask));
-
-        mockMvc.perform(get("/api/tasks"))
+    void testGetTaskByIdSuccess() throws Exception {
+        Mockito.when(taskService.getTaskById("t1")).thenReturn(Optional.of(task));
+        mockMvc.perform(get("/api/tasks/t1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.data[0].id").value("task001"))
-                .andExpect(jsonPath("$.msg").value("Tasks retrieved successfully!"));
-    }
-
-    // ========== Get Task By ID ==========
-    @Test
-    void testGetTaskByIdFound() throws Exception {
-        Mockito.when(taskService.getTaskById("task001"))
-                .thenReturn(Optional.of(mockTask));
-
-        mockMvc.perform(get("/api/tasks/task001"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.msg").value("Task retrieved successfully!"))
-                .andExpect(jsonPath("$.data.id").value("task001"));
+                .andExpect(jsonPath("$.data.title").value("Medication Reminder"))
+                .andExpect(jsonPath("$.msg").value("Task retrieved successfully!"));
     }
 
     @Test
     void testGetTaskByIdNotFound() throws Exception {
-        Mockito.when(taskService.getTaskById("notExist"))
-                .thenReturn(Optional.empty());
-
-        mockMvc.perform(get("/api/tasks/notExist"))
+        Mockito.when(taskService.getTaskById("999")).thenReturn(Optional.empty());
+        mockMvc.perform(get("/api/tasks/999"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value("404"))
                 .andExpect(jsonPath("$.msg").value("Task not found!"));
     }
 
-    // ========== Delete Task ==========
     @Test
     void testDeleteTaskSuccess() throws Exception {
-        Mockito.when(taskService.deleteTask("task001")).thenReturn(true);
-
-        mockMvc.perform(delete("/api/tasks/task001"))
+        Mockito.when(taskService.deleteTask("t1")).thenReturn(true);
+        mockMvc.perform(delete("/api/tasks/t1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.msg").value("Task deleted successfully!"));
     }
 
     @Test
     void testDeleteTaskNotFound() throws Exception {
-        Mockito.when(taskService.deleteTask("task001")).thenReturn(false);
-
-        mockMvc.perform(delete("/api/tasks/task001"))
+        Mockito.when(taskService.deleteTask("t1")).thenReturn(false);
+        mockMvc.perform(delete("/api/tasks/t1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.code").value("404"))
-                .andExpect(jsonPath("$.msg").value("Task not found!"));
+                .andExpect(jsonPath("$.code").value("404"));
     }
 
-    // ========== Update Task ==========
-    @Test
-    void testUpdateTaskSuccess() throws Exception {
-        Mockito.when(taskService.getTaskById("task001"))
-                .thenReturn(Optional.of(mockTask));
-        Mockito.when(taskService.updateTask(Mockito.any(Task.class)))
-                .thenReturn(mockTask);
-
-        String body = "{"
-                + "\"title\":\"Updated Task\""
-                + "}";
-
-        mockMvc.perform(put("/api/tasks/task001")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(body))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.msg").value("Task updated successfully!"));
-    }
-
-    @Test
-    void testUpdateTaskNotFound() throws Exception {
-        Mockito.when(taskService.getTaskById("notExist"))
-                .thenReturn(Optional.empty());
-
-        String body = "{"
-                + "\"title\":\"Updated Task\""
-                + "}";
-
-        mockMvc.perform(put("/api/tasks/notExist")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(body))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.code").value("404"))
-                .andExpect(jsonPath("$.msg").value("Task not found!"));
-    }
-
-    // ========== Worker Complete Task ==========
-    @Test
-    void testWorkerCompleteTaskSuccess() throws Exception {
-        Mockito.when(taskService.workerCompleteTask("task001"))
-                .thenReturn(mockTask);
-
-        mockMvc.perform(post("/api/tasks/task001/worker-complete"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.msg").value("Task marked as completed by worker!"));
-    }
-
-    @Test
-    void testWorkerCompleteTaskNotFound() throws Exception {
-        Mockito.when(taskService.workerCompleteTask("notExist"))
-                .thenReturn(null);
-
-        mockMvc.perform(post("/api/tasks/notExist/worker-complete"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.code").value("404"))
-                .andExpect(jsonPath("$.msg").value("Task not found!"));
-    }
-
-    // ========== Approve / Reject ==========
-    @Test
-    void testApproveTaskCompletionSuccess() throws Exception {
-        Mockito.when(taskService.approveTaskCompletion(Mockito.eq("task001"), Mockito.anyString()))
-                .thenReturn(mockTask);
-
-        String body = "{"
-                + "\"approvalReason\":\"Looks good\""
-                + "}";
-
-        mockMvc.perform(post("/api/tasks/task001/approve")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(body))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.msg").value("Task completion approved!"));
-    }
-
-    @Test
-    void testRejectTaskCompletionNotFound() throws Exception {
-        Mockito.when(taskService.rejectTaskCompletion(Mockito.eq("task999"), Mockito.anyString()))
-                .thenReturn(null);
-
-        String body = "{"
-                + "\"rejectionReason\":\"Incomplete\""
-                + "}";
-
-        mockMvc.perform(post("/api/tasks/task999/reject")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(body))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.code").value("404"))
-                .andExpect(jsonPath("$.msg").value("Task not found!"));
-    }
-
-    // ========== Recurring Task ==========
     @Test
     void testCreateRecurringTaskSuccess() throws Exception {
         Mockito.when(recurringTaskService.createRecurringTask(Mockito.any(CreateRecurringTaskRequest.class)))
-                .thenReturn(mockRecurringTask);
-
-        String body = "{"
-                + "\"title\":\"Weekly Health Check\","
-                + "\"frequency\":\"WEEKLY\""
-                + "}";
-
+                .thenReturn(recurringTask);
+        String body = "{\"title\":\"Daily Exercise\"}";
         mockMvc.perform(post("/api/tasks/recurring")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(body))
@@ -250,38 +125,83 @@ class TaskControllerTest {
     }
 
     @Test
-    void testToggleRecurringTaskStatusSuccess() throws Exception {
-        mockRecurringTask.setIsActive(false);
-        Mockito.when(recurringTaskService.toggleRecurringTaskStatus("rec001"))
-                .thenReturn(mockRecurringTask);
-
-        mockMvc.perform(post("/api/tasks/recurring/rec001/toggle"))
+    void testGetAllRecurringTasks() throws Exception {
+        Mockito.when(recurringTaskService.getAllRecurringTasks())
+                .thenReturn(List.of(recurringTask));
+        mockMvc.perform(get("/api/tasks/recurring"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.msg").value("Recurring task template deactivated successfully!"));
+                .andExpect(jsonPath("$.data[0].title").value("Daily Exercise"));
     }
 
     @Test
-    void testToggleRecurringTaskNotFound() throws Exception {
-        Mockito.when(recurringTaskService.toggleRecurringTaskStatus("notExist"))
+    void testToggleRecurringTaskStatus() throws Exception {
+        RecurringTask toggled = new RecurringTask();
+        toggled.setId("r1");
+        toggled.setIsActive(false);
+        Mockito.when(recurringTaskService.toggleRecurringTaskStatus("r1"))
+                .thenReturn(toggled);
+        mockMvc.perform(post("/api/tasks/recurring/r1/toggle"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.msg", containsString("deactivated")));
+    }
+
+    @Test
+    void testGetAllTasks() throws Exception {
+        Mockito.when(taskService.getAllTasks()).thenReturn(List.of(task));
+        mockMvc.perform(get("/api/tasks"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.data[0].title").value("Medication Reminder"))
+                .andExpect(jsonPath("$.msg").value("Tasks retrieved successfully!"));
+    }
+
+    @Test
+    void testGetTasksByStatus() throws Exception {
+        Mockito.when(taskService.getTasksByStatus("In Progress")).thenReturn(List.of(task));
+        mockMvc.perform(get("/api/tasks/status/In Progress"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.data[0].status").value("In Progress"));
+    }
+
+    @Test
+    void testApproveTaskCompletionSuccess() throws Exception {
+        Mockito.when(taskService.approveTaskCompletion(Mockito.eq("t1"), Mockito.anyString()))
+                .thenReturn(task);
+        mockMvc.perform(post("/api/tasks/t1/approve")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{\"approvalReason\":\"Good job\"}"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.msg").value("Task completion approved!"));
+    }
+
+    @Test
+    void testRejectTaskCompletionNotFound() throws Exception {
+        Mockito.when(taskService.rejectTaskCompletion(Mockito.eq("t1"), Mockito.anyString()))
                 .thenReturn(null);
-
-        mockMvc.perform(post("/api/tasks/recurring/notExist/toggle"))
+        mockMvc.perform(post("/api/tasks/t1/reject")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{\"rejectionReason\":\"Incorrect\"}"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.code").value("404"))
-                .andExpect(jsonPath("$.msg").value("Recurring task template not found!"));
+                .andExpect(jsonPath("$.code").value("404"));
     }
 
-    // ========== Task Stats ==========
     @Test
-    void testGetTaskStatsSuccess() throws Exception {
-        Mockito.when(taskService.getAllTasks()).thenReturn(Collections.singletonList(mockTask));
+    void testUpdateTaskStatusSuccess() throws Exception {
+        Mockito.when(taskService.updateTaskStatus(Mockito.eq("t1"), Mockito.anyString()))
+                .thenReturn(task);
+        mockMvc.perform(put("/api/tasks/t1/status")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{\"status\":\"Completed\"}"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.msg").value("Task status updated successfully!"));
+    }
+
+    @Test
+    void testGetTaskStats() throws Exception {
+        Mockito.when(taskService.getAllTasks()).thenReturn(List.of(task));
         Mockito.when(taskService.getTaskCountByStatus(Mockito.anyString())).thenReturn(1L);
         Mockito.when(taskService.getTaskCountByDueDate(Mockito.any(LocalDate.class))).thenReturn(1L);
-
         mockMvc.perform(get("/api/tasks/stats"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.msg").value("Task statistics retrieved successfully!"))
-                .andExpect(jsonPath("$.data.total").value(1));
+                .andExpect(jsonPath("$.msg").value("Task statistics retrieved successfully!"));
     }
 }
-
